<resources>
    <string name="app_name">Pattana Pragathi</string>
    <string name="app_sub_name">Urban Street vendor survey</string>
    <string name="ulb_name">ULB Name *</string>
    <string name="sel_ulb_name">Select ULB Name</string>
    <string name="ward_number">Ward Number *</string>
    <string name="sel_ward">Ward</string>
    <string name="sel_ward_number">Select Ward Number</string>
    <string name="name_of_vendor">Name of Street Vendor *</string>
    <string name="enter_name_of_vendor">Enter Name of Street Vendor</string>
    <string name="father_husband_name">Father/Husband Name *</string>
    <string name="enter_father_husband_name">Enter Father/Husband Name</string>
    <string name="sel_dob_age">Select DOB or Age</string>
    <string name="dob">DOB *</string>
    <string name="form_dob">DOB</string>
    <string name="form_age">Age *</string>
    <string name="sel_dob">Select DOB</string>
    <string name="age">Age</string>
    <string name="year">Years</string>
    <string name="enter_age">Enter Age</string>
    <string name="sel_gender">Sex / Gender *</string>
    <string name="sel_gender_val">Select Sex / Gender</string>
    <string name="sel_caste">Caste *</string>
    <string name="sel_physically_challenged">Physically Challenged *</string>
    <string name="sel_physically_challenged_val">Select Physically Challenged</string>
    <string name="sel_high_qualification">Education Qualification *</string>
    <string name="mob_num">Mobile Number *</string>
    <string name="ent_mob_num">Enter Mobile Number</string>
    <string name="val_mob_num">Enter Valid Mobile Number</string>
    <string name="ice_num">In Case of Emergency - Mobile No. *</string>
    <string name="ent_ice_num">Enter In Case of Emergency - Mobile No.</string>
    <string name="val_ice_num">Enter Valid In Case of Emergency - Mobile No.</string>
    <string name="aad_num">Aadhaar Number *</string>
    <string name="dist_name">District Name *</string>
    <string name="man_name">Mandal Name *</string>
    <string name="vil_name">Village Name *</string>
    <string name="house_no">House No *</string>
    <string name="street">Street *</string>
    <string name="enter_h_no">Enter House No</string>
    <string name="enter_street">Enter Street</string>
    <string name="ent_dist_name">Enter District Name</string>
    <string name="ent_man_name">Enter Mandal Name</string>
    <string name="ent_vil_nmae">Enter Village Name</string>
    <string name="ent_aad_num">Enter Aadhaar Number</string>
    <string name="valid_aad_num">Enter Valid Aadhaar Number</string>
    <string name="sel_bank">Bank *</string>
    <string name="sel_bank_val">Select Bank</string>
    <string name="sel_branch">Branch *</string>
    <string name="no_ifsc">IFSC Code doesn\'t exist</string>
    <string name="ifsc">IFSC Code *</string>
    <string name="bank_acc_num">Bank Account Number *</string>
    <string name="confirm_bank_acc_num">Confirm Bank Account Number *</string>
    <string name="enter_bank_acc_num">Enter Bank Account Number</string>
    <string name="enter_con_bank_acc_num">Enter Confirm Bank Account Number</string>
    <string name="bank_acc_sho_all_aero">Bank Account Number should not be all zeros</string>
    <string name="bank_acc_sho_min_ten">Bank Account Number should be minimum of 10 digits</string>
    <string name="accnt_no_conf_accnt_no_should_be_same">Bank account number and confirm  account number should be same</string>
    <string name="enter_eme_ctc_num">Enter Emergency Contact Number</string>
    <string name="sel_type_of_vending">Select Type of Vending</string>
    <string name="sel_vending_area">Vending Area</string>
    <string name="type_of_vending">Type of Vending *</string>
    <string name="sel_type_of_business">Select Type of Business</string>
    <string name="type_of_business">Type of Business *</string>
    <string name="vending_address">Vending Address *</string>
    <string name="enter_vending_address">Enter Vending Address</string>
    <string name="residential_address">Residential Address *</string>
    <string name="enter_residential_address">Enter Residential Address</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="enter_permanent_address">Enter Permanent Address</string>
    <string name="permanent_address_same_as">Permanent Address (Same as residential address)</string>
    <string name="vendor_details">Vendor Details</string>
    <string name="basic_details">Basic Details</string>
    <string name="account_details">Account Details</string>
    <string name="vending_details">Vending Details</string>
    <string name="contact_details">Contact Details</string>
    <string name="member_name">Name *</string>
    <string name="member_age">Age *</string>
    <string name="member_gender">Gender *</string>
    <string name="member_relation">Relationship *</string>
    <string name="member_qualification">Education Qualification *</string>
    <string name="member_item_name">Name</string>
    <string name="member_item_age">Age</string>
    <string name="member_item_gender">Gender</string>
    <string name="member_item_relation">Relationship</string>
    <string name="member_item_qualification">Education Qualification</string>
    <string name="ent_member_name">Enter Name</string>
    <string name="ent_member_age">Enter Age</string>
    <string name="ent_valid_member_age">Enter Valid Age</string>
    <string name="sel_member_gender">Select Gender</string>
    <string name="sel_member_relation">Select Relationship</string>
    <string name="sel_member_qualification">Select Qualification</string>
    <string name="sel_dist">District *</string>
    <string name="sel_man">Mandal *</string>
    <string name="sel_vil">Village *</string>
    <string name="sel_state">State *</string>
    <string-array name="ulb">
        <item>--Select--</item>
        <item>ULB-1</item>
        <item>ULB-2</item>
        <item>ULB-3</item>
        <item>ULB-4</item>
    </string-array>
    <string-array name="wards">
        <item>--Select--</item>
        <item>WARD-1</item>
        <item>WARD-2</item>
        <item>WARD-3</item>
        <item>WARD-4</item>
    </string-array>
    <string-array name="gender">
        <item>--Select--</item>
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
    </string-array>
    <string-array name="caste">
        <item>--Select--</item>
        <item>OC</item>
        <item>BC</item>
        <item>SC</item>
        <item>ST</item>
    </string-array>
    <string-array name="pwd">
        <item>--Select--</item>
        <item>None</item>
        <item>MR</item>
        <item>Ortho</item>
        <item>Visual</item>
    </string-array>
    <string-array name="qualification">
        <item>--Select--</item>
        <item>Illiterate</item>
        <item>Primary Education (1–5)</item>
        <item>Secondary Education (6–7)</item>
        <item>Education (8–10)</item>
        <item>Inter(10+2)</item>
        <item>Degree</item>
        <item>PG</item>
        <item>Others</item>
    </string-array>
    <string-array name="bank">
        <item>--Select--</item>
        <item>SBI</item>
        <item>PNB</item>
    </string-array>
    <string-array name="branch">
        <item>--Select--</item>
        <item>SBI</item>
        <item>ANB</item>
    </string-array>
    <string-array name="business">
        <item>--Select--</item>
        <item>Fruits</item>
        <item>Flowers</item>
        <item>Meat and Fish etc</item>
        <item>Milk and Milk Products</item>
    </string-array>
    <string-array name="vending_types">
        <item>--Select--</item>
        <item>Static</item>
        <item>Mobile</item>
        <item>Peripatetic</item>
    </string-array>
    <string-array name="relation">
        <item>--Select--</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Brother</item>
    </string-array>
    <string name="title_activity_member">MemberActivity</string>
    <string name="click_icon_to_add_family_members">Click + icon to add family members</string>
    <string name="submit">Submit</string>
    <string name="add">ADD</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="member_registration">Member Registration</string>
    <string name="vendor_registration">Vendor Enrollment</string>
    <string name="male">Male</string>
    <string name="female">FeMale</string>
    <string name="transgender">Transgender</string>
    <string name="applicant_photo">Applicant Photo *</string>
    <string name="vending_photo">Vending Activity Photo *</string>
    <string name="title_activity_dashboard">DASHBOARD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="download">Download</string>
    <string name="download_master">Download Masters</string>
    <string name="download_masters">Download Masters</string>
    <string name="ulb_master">ULB Master</string>
    <string name="bank_branch">Bank Master</string>
    <string name="dmv_master">Places Master</string>
    <string name="other_master">Other Master</string>
    <string name="kyc_master">KYC Master</string>
    <string name="business_master">Business Master</string>
    <string name="language_selection">Language Selection</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="con_time_out">The connection has timed out, please try again</string>
    <string name="io_exe">:IO Exception</string>
    <string name="something">Something went wrong, please try again</string>
    <string name="server_not">Server not responding, Please try later</string>
    <string name="plz_check_int">No network connectivity found, please check your internet connection</string>
    <string name="re_download">Re-Download</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="continue_str">Continue</string>
    <string name="state_message">Data not available for STATES, would you like to continue or download the data</string>
    <string name="dist_message">Data not available for DISTRICTS, would you like to continue or download the data</string>
    <string name="mandal_message">Data not available for MANDALS, would you like to continue or download the data</string>
    <string name="village_message">Data not available for VILLAGES, would you like to continue or download the data</string>
    <string name="ulb_message">Data not available for ULBS, would you like to continue or download the data</string>
    <string name="ward_message">Data not available for WARDS, would you like to continue or download the data</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout_menu">Logout</string>
    <string name="user_manual">User Manual</string>
    <string name="total_urban">Total Urban Pop. as per Census</string>
    <string name="target_urban">Target No. of Street Vendors (3.5% of Pop)</string>
    <string name="no_of_svs_prev_day">Total No. of SVs identified up to previous day\nDate :</string>
    <string name="no_of_svs_today">Total No. of SVs identified up to Today\nDate :</string>
    <string name="cum_no_svs">Total Cumulative No. of SVs identified</string>
    <string name="balance_to_identify">Balance to be identified</string>
</resources>