<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start_survey"
            android:icon="@drawable/vendor_registration"
            android:title="@string/vendor_registration" />
        <item
            android:id="@+id/nav_master_download"
            android:icon="@drawable/download"
            android:title="@string/download_masters" />
        <item
            android:id="@+id/nav_lang_sel"
            android:icon="@drawable/language"
            android:title="@string/language_selection" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/logout"
            android:title="@string/logout_menu" />

    </group>


    <group
        android:id="@+id/pri_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_pri_pol"
            android:icon="@drawable/privacy"
            android:title="@string/privacy_policy" />
        <item
            android:visible="false"
            android:id="@+id/nav_user_manual"
            android:icon="@drawable/manual"
            android:title="@string/user_manual" />


    </group>


</menu>
