<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dimen_5dp">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/root_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent" />



            <LinearLayout
                android:layout_below="@+id/root_cl"
                android:id="@+id/ll_entries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:visibility="visible"
                app:layout_behavior="@string/bottom_sheet_behavior">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <ImageView
                        android:id="@+id/ic_close"
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:background="@color/white"
                        android:padding="@dimen/dimen_5dp"
                        android:src="@drawable/ic_cancel"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_marginLeft="@dimen/dimen_10dp"
                        android:layout_toEndOf="@+id/ic_close"
                        android:layout_toRightOf="@+id/ic_close"
                        android:fontFamily="@font/elmessiri_regular"
                        android:padding="@dimen/dimen_5dp"
                        android:text="@string/member_registration"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_20sp" />

                    <TextView
                        android:id="@+id/btn_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/btn_background_white"
                        android:padding="@dimen/dimen_5dp"
                        android:src="@drawable/save"
                        android:text="@string/add"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:visibility="gone" />

                </RelativeLayout>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_5dp"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_5dp">


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_5dp"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:errorEnabled="true"
                        app:errorTextAppearance="@style/text_in_layout_error_hint_Style"
                        app:hintTextAppearance="@style/text_in_layout_hint_Style">

                        <EditText
                            android:id="@+id/et_member_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz.\n "
                            android:fontFamily="@font/elmessiri_regular"
                            android:hint="@string/member_name"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimen_5dp"
                            android:layout_marginLeft="@dimen/dimen_5dp"
                            android:layout_weight="1"
                            android:textColorHint="@color/black"
                            app:boxStrokeColor="@color/black"
                            app:errorEnabled="true"
                            app:errorTextAppearance="@style/text_in_layout_error_hint_Style"
                            app:hintTextAppearance="@style/text_in_layout_hint_Style">

                            <EditText
                                android:id="@+id/et_member_age"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/elmessiri_regular"
                                android:hint="@string/age"
                                android:imeOptions="actionDone"
                                android:inputType="number"
                                android:maxLength="2"
                                android:maxLines="1"
                                android:textColor="@color/black" />

                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen_5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/elmessiri_regular"
                            android:padding="@dimen/dimen_5dp"
                            android:text="@string/member_gender"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_16sp" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/gender_spinner"
                            style="@style/Widget.App.Spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                            app:theme="@style/ThemeOverlay.AppCompat.Light" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen_5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/elmessiri_regular"
                            android:padding="@dimen/dimen_5dp"
                            android:text="@string/member_relation"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_16sp" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/relation_spinner"
                            style="@style/Widget.App.Spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                            app:theme="@style/ThemeOverlay.AppCompat.Light" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen_5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/elmessiri_regular"
                            android:padding="@dimen/dimen_5dp"
                            android:text="@string/member_qualification"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen_16sp" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/qualification_spinner"
                            style="@style/Widget.App.Spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                            app:theme="@style/ThemeOverlay.AppCompat.Light" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_add_member"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:text="@string/submit" />

                </LinearLayout>
                </ScrollView>

            </LinearLayout>

    </RelativeLayout>


</layout>