<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="daily_report_data"
            type="com.cgg.streetvendor.source.reposnse.reports.DailyReportData" />
    </data>

    <LinearLayout
        android:id="@+id/data_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_30dp"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white"
                android:padding="@dimen/dimen_4dp"
                android:text="@{daily_report_data.districtName}"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/shareIV"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:padding="@dimen/dimen_4dp"
                android:src="@android:drawable/ic_menu_share"
                android:visibility="visible" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/absrtract_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:layout_marginRight="@dimen/dimen_8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_4dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/total_urban"
                        android:textColor="@color/dark_gray" />

                    <TextView
                        android:id="@+id/totalPopTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@{daily_report_data.svMobileRevisedTarget}"
                        android:textColor="@color/colorPrimary" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/target_urban"
                        android:textColor="@color/dark_gray" />

                    <TextView
                        android:id="@+id/popPerTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@{daily_report_data.svMobileRevisedTargetPercent}"
                        android:textColor="@color/colorPrimary" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/colorPrimary" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/pre_day_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/no_of_svs_prev_day"
                        android:textColor="@color/dark_gray" />

                    <TextView
                        android:id="@+id/pervDaySvsTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@{daily_report_data.prevdayTotal}"
                        android:textColor="@color/colorPrimary" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/today_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/no_of_svs_today"
                        android:textColor="@color/dark_gray" />

                    <TextView
                        android:id="@+id/todaySvs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@{daily_report_data.total}"
                        android:textColor="@color/colorPrimary" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/cum_no_svs"
                        android:textColor="@color/dark_gray" />

                    <TextView
                        android:id="@+id/cuumSvsTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@{daily_report_data.cummTotal}"
                        android:textColor="@color/colorPrimary" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/balance_to_identify"
                        android:textColor="@color/dark_gray" />

                    <TextView
                        android:id="@+id/balanceSvsTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@{daily_report_data.totalBalance}"
                        android:textColor="@color/colorPrimary" />


                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>